updates + api in swagger
